New Feature: Signature: Misc. changes to the Applet have been made. This commit is intended mostly to be a backup before another change is made (which is to actually expect the document to be signed to be in pure XHTML instead of a mix between the original XML and the XHTML) Issue: FENIX-209